--- a/index.html
+++ b/index.html
@@ -32,6 +32,108 @@
 <body>
 <table width=100%>
 <tr>
+    <td><a href="Mainpage.html"> الرئيسية</a></td>
+    <td> تعريف الذكاء الصناعي</td>
+    <td><a href="artificialintelligenceapplication.html">تطبيقات الذكاء الصناعي</a></td>
+    <td><a href="advantagesofartificialintelligence.html">مميزات الذكاء الصناعي </a></td>
+    <td><a href="disadvantagesofartificialintelligence.html">عيوب الذكاء الصناعي </a></td>
+</tr>
+</table>
+<br>
+<center> <font color="red" size="7">  تعريف الذكاء الصناعي </font> </center>
+<font size="4">يعتبر الذكاء الصناعي احد فروع علم الحاسوب واحدي الركائز الاساسية التي تقوم عليها صناعة التكنولوجيا
+<br>
+في العصر الحالي ويمكن تعريف مصطلح الذكاء الصناعي بانه قدرة الالات والحواسيب الرقمية علي القيام بمهام
+<br>
+معينة تحاكي وتشابه تلك التي تقوم بها الكائنات الذكية كالقدرة علي التفكير او التعلم من التجارب السابقة 
+<br>
+او غيرها من العمليات الاخري التي تتطلب عمليات ذهنية، كما يهدف الذكاء الاصطناعي إلى الوصول إلى أنظمة تتمتع بالذكاء وتتصرف على النحو الذي يتصرف به البشر
+<br>
+من حيث التعلُم والفهم، بحيث تُقدم تلك الأنظمة لمُستخدميها خدمات مُختلفة من التعليم والإرشاد والتفاعل وما إلى ذلك.</font>
+<br>
+ <center> <img src="https://modo3.com/thumbs/fit630x300/378/1573983294/%D8%AA%D8%B9%D8%B1%D9%8A%D9%81_%D8%A7%D9%84%D8%B0%D9%83%D8%A7%D8%A1_%D8%A7%D9%84%D8%A7%D8%B5%D8%B7%D9%86%D8%A7%D8%B9%D9%8A.jpg"> </center>
+</body>
+</html>
+<html>
+<head>
+<title>Abdallah Ali Shahat</title>
+</head>
+<body>
+<table width=100%>
+<tr>
+    <td><a href="Mainpage.html"> الرئيسية</a></td>
+    <td><a href="defineartificialintelligence.html">تعريف الذكاء الصناعي</a></td>
+    <td> تطبيقات الذكاء الصناعي</td>
+    <td><a href="advantagesofartificialintelligence.html">مميزات الذكاء الصناعي</a></td>
+    <td><a href="disadvantagesofartificialintelligence.html"> عيوب الذكاء الصناعي </a></td>
+</tr>
+</table>
+<br>
+<center> <font color="red" size="7">  تطبيقات الذكاء الصناعي  </font> </center>
+<font size="4">يوجد العديد من التطبيقات العمليّة للذكاء الاصطناعي، ومن أبرز هذه التطبيقات ما يأتي:
+<br>
+الألعاب: يتم استخدام أنظمة الذكاء الاصطناعي في العديد من الألعاب الالكترونيّة؛ التي تتطلب بُعداً وتفكيراً استراتيجياً، كلعبة البوكر ولعبة الشطرنج على سبيل المثال.
+    <br>
+    التفاعُل مع النظام المرئي: يُمكن لبعض تطبيقات الذكاء الاصطناعي تفسير وتحليل ما يتم إدخاله لها من صور؛ كبرامج التعرف على الوجه، وتحليل الصور لتحديد الموقع، وغيرها من التطبيقات المماثلة.
+<br>
+التفاعُل مع الكتابة اليدويّة: وذلك من خلال تطبيقات التعرف إلى الخط المكتوب باليد سواءً كانت عمليّة الكتابة على الورق أو على شاشة الجهاز نفسه.
+
+<br>
+الروبوتات الذكيّة: تقوم الروبوتات بالكثير من الأعمال المُختلفة، إذ تستطيع القيام بالأعمال التي يقوم بها البشر،
+ <br>
+ وذلك لقدرتها على الإحساس بالعوامل المحيطة كالضوء، والحرارة، والصوت، أو الحركة، وذلك عبر مُستشعرات خاصة، 
+ <br>
+ كما أن هذه الروبوتات قادرة على التعلُم من تجاربها السابقة والاستفادة من الأخطاء.
+<br>
+التفاعُل مع الصوت المنطوق: إذ يُمكن استخدام بعض أنظمة الذكاء الاصطناعي للاستماع إلى الكلام وفهم معانيه، حتى لو تم النُطق به في ظل وجود بعض الضوضاء أو تم نطقه باللهجة العامية أو لغة الشارع.
+<br>
+تقديم النصح والإرشاد: تستطيع بعض تطبيقات الذكاء الاصطناعي تقديم المشورة والنُّصح لمُستخدميها من البشر بمجالات معينة، كالمجال الطبي مثلاً، وذلك بتحليل أعراض مرض ما للوصول إلى المرض وعلاجه على سبيل المثال
+<br>
+</font>
+<br>
+ <center> <img src="https://modo3.com/thumbs/fit630x300/79593/1554620632/%D8%AA%D8%B9%D8%B1%D9%8A%D9%81_%D9%88%D9%81%D9%88%D8%A7%D8%A6%D8%AF_%D9%88%D8%A3%D8%B6%D8%B1%D8%A7%D8%B1_%D8%A7%D9%84%D8%A3%D9%84%D8%B9%D8%A7%D8%A8_%D8%A7%D9%84%D8%A7%D9%84%D9%83%D8%AA%D8%B1%D9%88%D9%86%D9%8A%D8%A9.jpg"> </center>
+</body>
+</html>
+<html>
+<head>
+<title>Abdallah Ali Shahat</title>
+</head>
+<body>
+<table width=100%>
+<tr>
+    <td><a href="Mainpage.html">الرئيسية</a></td>
+    <td><a href="defineartificialintelligence.html"> تعريف الذكاء الصناعي</a></td>
+    <td><a href="artificialintelligenceapplication.html"> تطبيقات الذكاء الصناعي</a></td>
+    <td>مميزات الذكاء الصناعي </td>
+    <td><a href="disadvantagesofartificialintelligence.html">عيوب الذكاء الصناعي </a></td>
+</tr>
+</table>
+<br>
+<center> <font color="red" size="7"> مميزات الذكاء الصناعي </font> </center>
+<br>
+يوجد العديد من الإيجابيّات والفوائد التي تترتب على استخدام الذكاء الاصطناعي، ومن هذه الفوائد الآتي:
+<ul>
+<li>التطبيقات المُهمة للحياة اليوميّة: يوفر الذكاء الاصطناعي العديد من التطبيقات التي أصبحت ذات أهميّة للحياة اليوميّة للإنسان،
+     ويعد الهاتف الذكي وما يحتويه من أنظمة ذكيّة متنوعة كنظام تحديد المواقع، أحد أبرز الأمثلة على حاجة الإنسان لتطبيقات الذكاء الاصطناعي</li>
+<li>التخلُص من الأعمال المُتكررة: إذ يُمكن استخدام أنظمة الذكاء الاصطناعي للقيام بالأعمال الاعتياديّة التي تتطلب نفس آليّة العمل في كل مرة،
+     كما يُمكن استخدام هذه الأنظمة للقيام بالأعمال التي قد تُشكل خطراً على حياة الإنسان.
+</li>
+<li>تقديم الرعاية الطبيّة: يوجد العديد من أنظمة الذكاء الاصطناعي التي تُقدم الرعاية الطبيّة للإنسان، وذلك من خلال أجهزة محاكاة الجراحة، أو تلك التطبيقات التي تُساعد على كشف الاضطرابات العصبية أو تلك التي تُتيح للمريض معرفة الآثار الجانبية للأدوية،
+     كما لا بد من ذكر تطبيقات الجراحة الإشعاعية التي ساعدت على إمكانية استئصال الأورام دون إلحاق أي أذى بالأنسجة السليمة المحيطة.
+</li>
+<li>القدرة على معالجة كم هائل من البيانات: بإمكان أنظمة الذكاء الاصطناعي التعامل مع كم هائل من البيانات وتخزينها ومعالجتها.</li>
+<li>القيام بالأعمال الصعبة: تستطيع أنظمة الذكاء الاصطناعي القيام بالأعمال التي قد يعجز البشر عن تأديتها، كعمليات التنقيب واستكشاف الأماكن التي يصعب الوصول إليها كقاع المحيط.</li>
+</ul>
+ <center> <img src="https://modo3.com/thumbs/fit630x300/5187/1415451505/%D9%85%D8%AC%D8%A7%D9%84_%D8%A7%D9%84%D8%B0%D9%83%D8%A7%D8%A1_%D8%A7%D9%84%D8%A7%D8%B5%D8%B7%D9%86%D8%A7%D8%B9%D9%8A.jpg"> </center>
+</body>
+</html>
+<html>
+<head>
+<title>Abdallah Ali Shahat</title>
+</head>
+<body>
+<table width=100%>
+<tr>
     <td><a href="Mainpage.html" >الرئيسية</a></td>
     <td><a href="defineartificialintelligence.html"> تعريف الذكاء الصناعي</a></td>
     <td><a href="artificialintelligenceapplication.html"> تطبيقات الذكاء الصناعي</a></td>
